visualization of the autocomplete in search filter

--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -82,9 +82,8 @@
 
 		}
 		ul.css_autocomplete_valor.in_search_mode {
-			margin-top: 25px;
-			display: table;
 			width: 100%;
+			padding-top: 10px;
 		}
 		ul.css_autocomplete_valor > li {
 			display: flex;
