--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -181,7 +181,8 @@ input.css_autocomplete_hi_dato_hidden {
 /* Search mode variant
 -------------------------------------------*/
 .css_autocomplete_hi_valor.in_search_mode {
-	width: auto;
+	width: 100%;
+	padding-top: 10px;
 }
 
 
