CSS fine tune for component_options_container

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -410,3 +410,20 @@ div.dato_refecence_default_lang {
 		margin: 5px;
 	}
 
+
+/* component_options_container
+------------------------------------------------------- */
+	.content_data > .component_options_container {
+		display: none;
+		position: absolute;
+		width: calc(100% + 21px);
+		z-index: 10;
+		background-color: #e6e6e6;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		left: -10px;
+		margin-top: 5px;
+		opacity: .98;
+		border-top: 0.5px solid #e1e0e0;
+	}
+
