change the css of autocomplete search

--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -235,7 +235,7 @@
 	.filter_by_list {
 		display: table;
 		//display: table;
-		background-color: #8E8E8E;
+		//background-color: #8E8E8E;
 		padding: 10px;	
 		z-index: 1001;
 		/*
@@ -245,7 +245,7 @@
 		margin-top:10px;
 		border-radius: 4px;
 		white-space: nowrap;
-		color: #ffffff !important;
+		//color: #ffffff !important;
 		width: 100%;
 		}
 		.filter_by_list li {
@@ -315,6 +315,7 @@
 				//margin-top: 0; //10px;
 				//margin-bottom: 5px;
 				clear: both;
+				background-color: #cdcdcd;
 				}
 			.autosearch_options.in_search_mode {
 				padding-right: 5px;
@@ -414,24 +415,5 @@
 				background-color: transparent !important
 			}
 		}
-	}
-
-	.component_options_container{
-		display: none;
-		position: absolute;
-		width: 100%;
-		z-index: 10;
-		background-color: @color_selected_wrap;
-		//box-shadow: 2px 2px 5px #d4d4d4;
-		//margin-top: 9px;
-		border-bottom-left-radius: 10px;
-		border-bottom-right-radius: 10px;
-		//border-top: 0.5px solid #ccc;
-		left: 0px;
-		right: 0px;
-	}
-
-	.component_options_container_active{
-		display: block;
 	}
 
