--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -413,17 +413,37 @@ div.dato_refecence_default_lang {
 
 /* component_options_container
 ------------------------------------------------------- */
-	.content_data > .component_options_container {
+	.component_options_container {
 		display: none;
 		position: absolute;
-		width: calc(100% + 21px);
+		width: ~"calc(100% + 21px)";
 		z-index: 10;
-		background-color: #e6e6e6;
+		background-color: @color_selected_wrap;
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
 		left: -10px;
 		margin-top: 5px;
 		opacity: .98;
-		border-top: 0.5px solid #e1e0e0;
+		border-top: 0.5px solid #ccc;
+	}
+
+/*
+	.component_options_container{
+		display: none;
+		position: absolute;
+		width: 100%;
+		z-index: 10;
+		background-color: @color_selected_wrap;
+		//box-shadow: 2px 2px 5px #d4d4d4;
+		//margin-top: 9px;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		//border-top: 0.5px solid #ccc;
+		left: 0px;
+		right: 0px;
+	}
+*/
+	.component_options_container_active{
+		display: block;
 	}
 
