--- a/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
+++ b/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
@@ -22,14 +22,15 @@
 		width: 100%;
 		background: #fff url("../../../themes/default/lupa2.svg") right center no-repeat;
 		background-size: auto 100%;
-		background-position-x: 95%;
-		transition: all .2s ease-in-out;		
+		//background-position-x: 95%;
+		background-position: bottom -1px right 5px;
+		//transition: all .2s ease-in-out;		
 		//opacity: 0.5;
 	}
 	.autocomplete_wrapper input.autocomplete_input:focus {
 		opacity: 1;
 		//width: 150px;
-		background-position-x: 95%;
+		//background-position-x: 95%;
 	}
 	// Search mode
 	.autocomplete_wrapper.in_search_mode {
