--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -423,27 +423,21 @@ div.dato_refecence_default_lang {
 		border-bottom-right-radius: 10px;
 		left: -10px;
 		margin-top: 5px;
-		opacity: .98;
 		border-top: 0.5px solid #ccc;
 	}
 
-/*
-	.component_options_container{
-		display: none;
-		position: absolute;
-		width: 100%;
-		z-index: 10;
-		background-color: @color_selected_wrap;
-		//box-shadow: 2px 2px 5px #d4d4d4;
-		//margin-top: 9px;
-		border-bottom-left-radius: 10px;
-		border-bottom-right-radius: 10px;
-		//border-top: 0.5px solid #ccc;
-		left: 0px;
-		right: 0px;
+
+	.component_options_container_edit_in_list {
+		display: inline-block;
+		float: right;
+		//border: none;
+		//position: initial;
+		//margin:0;
+		//left: 0;
+		//background: none;
+		//width: initial;
 	}
-*/
+
 	.component_options_container_active{
 		display: block;
 	}
-
