--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -35,10 +35,11 @@
 		position: absolute;
 		/* opacity: .5; */
 		right: 0;
-		top: -17px;
+		top: -23px;
 		background-color: @color_selected_wrap;
 		padding-left: 2px;
-		padding-right: 2px;
+		padding-right: 2px + 3px;
+		padding-top: 2px;
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
 		}
