--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -119,10 +119,9 @@ input.css_autocomplete_hi_dato_hidden {
 	}
 
 
-
-	.wrap_portal_list{
-		padding: 1px;
-	}
+	//.wrap_portal_list{
+	//	padding: 1px;
+	//}
 
 	.css_autocomplete_hi_ul_edit_in_portal {
 		display: inline-block;
