--- a/lib/dedalo/section/css/section.less
+++ b/lib/dedalo/section/css/section.less
@@ -171,10 +171,13 @@
 	}
 
 
-.wrap_component.wrap_portal_list{
-	padding: 1px;
-	min-height: initial;
-}
+	.wrap_component.wrap_portal_list {
+		padding: 1px;
+		min-height: initial;
+		}
+		//.wrap_component.wrap_portal_list > .content_data {
+		//	display: flex;
+		//}
 
 
 #load_rows_button {
