--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -61,8 +61,18 @@
 		}
 		// BTN EDIT ROW
 		.edit_autocomplete_row {
+			//top: 1px;
+		    //left: 5px;
+
 			top: 1px;
-		    left: 5px;
+			/* margin-left: 5px; */
+			/* position: relative; */
+			/* width: 23px; */
+			/* left: 0; */
+			margin: 0;
+			padding: 0;
+			min-width: 15px;
+			margin-left: 5px;
 		}
 		// BTN NEW
 		.new_autocomplete {	
@@ -101,7 +111,7 @@
 			max-width: 100%;
 		}
 
-	ul.css_autocomplete_valor_edit_in_list{
+	ul.css_autocomplete_valor_edit_in_list {
 		display: inline-block;
 		width: 45%;
 	}
