Change the look and feel of the autocomplete options

--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -280,11 +280,13 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 			max-width: 90%;
+			color: #7c7c7c;	
 			}
 			.filter_by_list li > label > span {
 				position: absolute;
 				right: 150px;
 				padding-right: 15px;
+				color: #7c7c7c;	
 			}
 		.filter_by_list hr {
 			width: 100%;
@@ -352,8 +354,12 @@
 					padding-left: 2px;
 					flex-grow: 1;
 				}
-				.filter_fields ul li label {
-					margin-right: 10px;				
+				.filter_fields ul li .label {
+					margin-right: 10px;
+					color: #7c7c7c;		
+				}
+				.filter_fields label {
+					color: #7c7c7c;		
 				}
 				.filter_fields ul li input {
 					//max-width: 150px;
