--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -440,3 +440,7 @@ div.dato_refecence_default_lang {
 	.component_options_container_active{
 		display: block;
 	}
+
+	.new_element_container{
+		background-color: #f3f0f0;
+	}
