--- a/lib/dedalo/component_relation_parent/html/component_relation_parent_search.phtml
+++ b/lib/dedalo/component_relation_parent/html/component_relation_parent_search.phtml
@@ -5,7 +5,6 @@
 	print '<div class="wrap_component css_wrap_relation_parent tooltip_active in_search_mode" id="'.$id_wrapper.'" ';
 	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
 	print "data-tipo=\"{$tipo}\" ";
-	#print "data-from_component_tipo=\"{$from_component_tipo}\" ";
 	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{$component_info}' ";
@@ -14,6 +13,8 @@
 	print "data-relation_type=\"".DEDALO_RELATION_TYPE_CHILDREN_TIPO."\" "; // Note that use CHILDREN_TIPO for search only purposes
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
 	print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";
+	print 'data-search_query_object=\''.$json_search_query_object.'\' ';
+	print "data-limit=\"$limit\" ";
 	print '>';
 
 	
@@ -40,7 +41,7 @@
 				#
 				# AUTOCOMPLETE SERVICE
 				$autocomplete_wrapper_id = 'aw_' . $identificador_unico;
-				$html_content .= '<div class="autocomplete_wrapper" id="'.$autocomplete_wrapper_id.'"></div>';
+				$html_content .= '<div class="autocomplete_wrapper in_search_mode" id="'.$autocomplete_wrapper_id.'"></div>';
 
 				#
 				# INIT COMPONENT
@@ -94,5 +95,5 @@
 	print $html_content;	
 
 	
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 ?>
