--- a/lib/dedalo/component_relation_related/html/component_relation_related_edit.phtml
+++ b/lib/dedalo/component_relation_related/html/component_relation_related_edit.phtml
@@ -19,6 +19,8 @@
 	print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";
 	print "data-relation_type=\"{$relation_type}\" ";
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
+	print 'data-search_query_object=\''.$json_search_query_object.'\' ';
+	print "data-limit=\"$limit\" ";
 	print ">";
 
 	# ETIQUETA (LABEL)
@@ -116,65 +118,34 @@
 						break;
 				}//end switch ($source_mode)
 
-				/*
 				#
 				# TERMS
-				# dump($ar_valor, ' ar_valor ++ '.to_string());
-				#foreach ((array)$dato as $key => $current_locator) {
-				foreach ($ar_valor as $current_value => $value) {
-
-					$current_locator  		= json_decode($current_value);
-					$current_section_id 	= $current_locator->section_id;
-					$current_section_tipo 	= $current_locator->section_tipo;
-					
-					$html_content .= "<div class=\"relation_related_input_line css_relation_related_valor\">";
-
-					# REMOVE BUTTON
-					$html_content .= "<input type=\"button\" class=\"button_remove component_relation_related_button_remove\" value=\"\" ";
-					$html_content .= "data-role=\"component_relation_related_button_remove\" ";
-					$html_content .= "data-locator='$current_value'";
-					$html_content .= "onclick=\"component_relation_related.remove_locator(this)\" />";
-
-					# TERM STRING
-					#$value = ts_object::get_term_by_locator( $current_locator, DEDALO_DATA_LANG, $from_cache=true );
-
-					$html_content .= '<span class="locator_label">';
-					$html_content .= $value;
-					if(SHOW_DEBUG===true) {
-						$html_content .= ' <span class="notes">['.$current_locator->section_tipo.'_'.$current_locator->section_id.']</span>';
-					}
-					$html_content .= '</span>';
-
-					$html_content .= "</div>";//relation_related_input_line
-				}//end foreach ((array)$dato as $key => $current_locator)
-				*/
-
-				# TERMS
-				$html_content .= "<ul class=\"css_relation_related_valor in_search_mode\">";
+				$html_content .= '<ul class="css_relation_related_valor in_search_mode">';
 				foreach ($ar_valor as $current_value => $value) {
 
 					$current_locator  		= json_decode($current_value);
 					$current_section_id 	= $current_locator->section_id;
 					$current_section_tipo 	= $current_locator->section_tipo;
 
-					$html_content .= "<li>";
+					$html_content .= '<li>';
 
 					# BTN DELETE
-					$html_content .= "<div class=\"icon_bs link css_relation_related_button_delete\" ";
+					$html_content .= '<div class="icon_bs link css_relation_related_button_delete" ';
+					$html_content .= 'onclick="component_relation_related.delete(this)" ';
+					$html_content .= "title=\"$label $parent\" ";
 					$html_content .= "data-tipo=\"{$tipo}\" ";
 					$html_content .= "data-current_value='$current_value' ";
-					$html_content .= "data-role=\"relation_related_button_delete\" ";
-					$html_content .= "title=\"$label $parent\" ";
-					$html_content .= "onclick=\"component_relation_related.delete(this)\"></div>";
-					#$html_content .= "onclick=\"component_relation_related.remove_locator(this)\"></div>";
+					$html_content .= "data-role=\"relation_related_button_delete\" ";					
+					$html_content .= '></div>';
+
 
 					# VALUE . STRING RESOLVED TO SHOW					
 					$html_content .= $value;					
-					$html_content .= ' <span class="notes">['.$current_locator->section_tipo.'_'.$current_locator->section_id.']</span>';
+					$html_content .= '<span class="notes">['.$current_locator->section_tipo.'_'.$current_locator->section_id.']</span>';
 					
-					$html_content .= "</li>";
+					$html_content .= '</li>';
 				}
-				$html_content .= "</ul>";
+				$html_content .= '</ul>';
 
 
 				#
@@ -185,7 +156,7 @@
 					#dump($references, ' references ++ '.to_string());
 					foreach ((array)$references as $key => $current_locator) {
 						
-						$html_content .= "<div class=\"relation_related_input_line\">";
+						$html_content .= '<div class="relation_related_input_line">';
 
 						# EDIT BUTTON						
 						$html_content .= "<input type=\"button\" class=\"icon_bs component_relation_related_button_edit\" value=\"\" ";
@@ -204,23 +175,12 @@
 						}
 						$html_content .= '</span>';
 
-						$html_content .= "</div>";//relation_related_input_line
+						$html_content .= '</div>';//relation_related_input_line
 					}
-				}
-
-
-				#
-				# AUTOCOMPLETE ELEMENTS
-					/*
-					# INPUT SEARCH FIELD
-					$html_content .= "<input type=\"text\" class=\"css_autocomplete_search_field css_relation_related_search_field edit_hidden\" placeholder=\"".label::get_label('buscar')."...\" ";
-					$html_content .= "onfocus=\"component_relation_related.activate(this)\" ";
-					$html_content .= "tabindex=\"1\" ";
-					$html_content .= "/>";
-					*/					
+				}//end if (!empty($references))
+			
 
 			$html_content .= "</div>";//end wrap_parent_values
-
 
 
 
@@ -246,7 +206,7 @@
 	print $html_content;
 
 
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 
 
 	# html_delimiter
