--- a/lib/dedalo/component_relation_related/html/component_relation_related_search.phtml
+++ b/lib/dedalo/component_relation_related/html/component_relation_related_search.phtml
@@ -3,6 +3,7 @@
 	# VISUALIZADOR HTML	
 	
 	print "<div class=\"wrap_component css_wrap_relation_related tooltip_active in_search_mode\" id=\"{$id_wrapper}\" ";
+	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
 	print "data-tipo=\"{$tipo}\" ";
 	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";
@@ -10,9 +11,10 @@
 	print "data-component_info='{$component_info}' ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='".json_encode($dato)."' ";
-	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
 	print "data-relation_type='{$relation_type}' ";
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
+	print 'data-search_query_object=\''.$json_search_query_object.'\' ';
+	print "data-limit=\"$limit\" ";
 	print ">";
 	
 	# ETIQUETA (LABEL)
@@ -37,7 +39,7 @@
 				#
 				# AUTOCOMPLETE SERVICE
 				$autocomplete_wrapper_id = 'aw_' . $identificador_unico;
-				$html_content .= '<div class="autocomplete_wrapper" id="'.$autocomplete_wrapper_id.'"></div>';
+				$html_content .= '<div class="autocomplete_wrapper in_search_mode" id="'.$autocomplete_wrapper_id.'"></div>';
 
 
 				#
@@ -52,10 +54,10 @@
 
 				#
 				# TERMS
-				$html_content .= "<ul class=\"css_relation_related_valor in_search_mode\">";
+				$html_content .= '<ul class="css_relation_related_valor in_search_mode">';
 				foreach ($ar_valor as $current_value => $value) {
 
-					$html_content .= "<li>";
+					$html_content .= '<li>';
 
 					# BTN DELETE
 					$html_content .= "<div class=\"icon_bs link css_relation_related_button_delete\" ";
@@ -72,9 +74,9 @@
 						#$html_content .= " <span class=\"notes\">$current_value</span>";
 					}
 
-					$html_content .= "</li>";
+					$html_content .= '</li>';
 				}
-				$html_content .= "</ul>";
+				$html_content .= '</ul>';
 
 				# INPUT DATA HIDDEN
 				$html_content .= "<input type=\"text\" name=\"{$search_input_name}\" class=\"relation_related_dato_hidden\" style=\"width:300px;display: none\" ";
@@ -98,5 +100,5 @@
 	print $html_content;	
 
 	
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 ?>
