Transition to component wrap display: flex

--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -71,12 +71,13 @@
 	display: inline;
 	margin-left: 2px;
 	max-height: 300px;
-	max-width: 40px;
+	//max-width: 40px;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	/*white-space: nowrap; Don't forget this one
 	display: inline-block;*/
 	word-break: break-all;
+	width: 70%;
 }
 .value_bold {
 	color: #333333;
@@ -105,6 +106,7 @@
 ---------------------------------------- */
 #inspector_tools {
 	padding-left: 6px;
+	width: 100%;
 }
 /* INSPECTOR RELATIONS
 ---------------------------------------- */
@@ -172,6 +174,7 @@
 	padding-left: 4px;
 	padding-right: 4px;
 	z-index: 10;
+	width: 100%;
 }
 #inspector_log .ok, #inspector_log .error {
 	margin: 0px;
