--- a/lib/dedalo/section_group/css/section_group.less
+++ b/lib/dedalo/section_group/css/section_group.less
@@ -65,7 +65,11 @@
 ----------------------------------------- */
 .css_section_group_content {
 	display: table;
-	width: 100%;	
+	width: 100%;
+
+	// EN PROCESO DE IMPLANTACIÓN !
+	//display: flex;
+	//flex-wrap: wrap;
 }
 
 .css_section_list_wrap .css_section_group_content {
